
Version 3.2.7 - xx yyy 2016
- correct statistics calculation in regard of using max or average calculated using measurement reference ordinal
HoTTAdapter2
	- correct device XMl in regards of ESC statistics calculation capacity/altitude  
MC3000
	- add new system temperature measurement value
	- add RAM cell type support
	- correct NiZn program modus 

Version 3.2.6 - 06 May 2016
fix - Linux adaptation for incompatible but working SWT SashForm.setWeights
MC3000 
	- add warning message selecting continuous data recording in combination with reduced without pause,..
	- add capability to data capture finish for 15 minutes
	- change energy calculation method
iCharger* 
	- handle state property exception while receiving incomplete data 
	- remove checksum calculation
iCharger4010DUO
	- enable USB live data gathering
Weatronic-Telemetry
	- handle not initialized measurement symbols which are sometimes displayed as string null
Polaron EX1400
	- add support
HoTTAdapter 
	- fix live data gathering of missing ESC values
HoTTAdapter*
	- enhance sensor detection in transmitter logs mainly needed while high Rx->Tx PLoss (pupil transmitter logs)

Version 3.2.5 - 06 Mar 2016
SkyRC MC3000 
- fix gatherer timing problem
- set activation wait timer 15 minutes
- add start stop message
- fix pause reduction in combi record set
eStation BC6 
- fix missing Balance while loading data from file
adapt font used by MAC OS X 10.11
update windows NSIS installer
update Copyright including 2016
add Weatronic-Telemetry support
add iMax B6 support
HoTTAdpter* 
- fix setting filter properties
FutabaTelemetry 
- correct error message
- add plausibility check to altitude data to better succeed while KMZ export.
OpenTxTelemetry 
- correct error message
fix - runtime error in GraphicsComposite in focus lost listener
fix - keep record formating while cut edge (add missing copy fields in copy constructor)
fix - CSV export remove blank character after time column