@@ -1,4 +1,4 @@
-# udev rule to make Junsi iCharger 4010 DUO USB HID device usable by users of group uucp 
+# udev rule to make Junsi iCharger 308/4010 DUO USB HID device usable by users of group uucp 
 # which is required for serial communication as well              
 SUBSYSTEM=="usb", ATTRS{idVendor}=="0483", ATTRS{idProduct}=="5751", MODE="0666", GROUP="uucp"
 SUBSYSTEM=="usb_device", ATTRS{idVendor}=="0483", ATTRS{idProduct}=="5751", MODE="0666", GROUP="uucp"
