@@ -1,6 +1,6 @@
     <?xml version="1.0" encoding="UTF-8"?>
     <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-    <!-- This is a dummy driver which binds to Junsi iCharger 4010 Duo USB interface  -->
+    <!-- This is a dummy driver which binds to Junsi iCharger 308/4010 Duo USB interface  -->
     <!-- contains no actual code; its only purpose is to     -->
     <!-- prevent Apple's USBHID driver from exclusively      -->
     <!-- opening the device.                                 -->
@@ -11,7 +11,7 @@
         <key>CFBundleIconFile</key>
         <string></string>
         <key>CFBundleIdentifier</key>
-        <string>com.icharger4010duo.driver.dummy</string>
+        <string>com.ichargerduo.driver.dummy</string>
         <key>CFBundleInfoDictionaryVersion</key>
         <string>6.0</string>
         <key>CFBundlePackageType</key>
@@ -22,8 +22,8 @@
         <string>1.0.0d1</string>
         <key>IOKitPersonalities</key>
         <dict>
-            <!-- The Junsi iCharger 4010 DUO USB interface -->
-            <key>iCharger4010DUO</key>
+            <!-- The Junsi iCharger 308/4010 DUO USB interface -->
+            <key>iChargerDUO</key>
             <dict>
                 <key>CFBundleIdentifier</key>
                 <string>com.apple.kpi.iokit</string>
